# MagAgent

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  PRD.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  RELEASE_PREP_NEXT.md
docs/examples/: quickstart-5-minute.md  release-prep-recipe.json
docs/gateway/: setup-discord.md  setup-slack.md  setup-telegram.md
docs/skills/create-images/: SKILL.md
docs/skills/create-pdfs/: SKILL.md
docs/skills/create-spreadsheets/: SKILL.md
docs/skills/create-video-audio/: SKILL.md
docs/skills/create-word-docs/: SKILL.md
docs/skills/data-analysis/: SKILL.md
docs/skills/desktop-automation/: SKILL.md
docs/skills/git-workflow/: SKILL.md
docs/skills/rest-api/: SKILL.md
docs/skills/sqlite-database/: SKILL.md
evals/: focus-garden-app.json  provider-tool-use.json
src/magent/: __init__.py  activity_events.py  agent.py  agent_defs.py  artifact_contracts.py  ask_audit.py  auth_store.py  browser.py  cache.py  command_policy.py  config_proposals.py  config_safety.py  config_ux.py  config_validation.py  context.py  daemon.py  daily_driver.py  desktop_api.py  diagnostics.py  docs.py  evals.py  events.py  github_workflows.py  goal_orchestrator.py  hooks.py  image_generation.py  install.py  logging.py  lsp.py  memory_inbox.py  model_capabilities.py  model_health.py  performance.py  permission_ux.py  playbook.py  plugins.py  project_scan.py  prompt_input.py  provider_catalog.py  provider_cooldown.py  (+21 more)
src/magent/cli/: app.py  command_context.py  main.py
src/magent/cli/commands/: __init__.py  agents.py  browser.py  config.py  daemon.py  docs.py  evals.py  events.py  github.py  hooks.py  lsp.py  performance.py  permissions.py  plugins.py  providers.py  workbench.py
src/magent/config/: __init__.py
src/magent/docs/: agents.md  architecture.md  browser.md  checkpoints.md  command-reference.md  commands.md  comparisons.md  config-reference.md  configuration.md  context.md  daemon.md  desktop-integration.md  evals.md  github.md  hooks.md  lsp.md  memory.md  overview.md  patch-workflow.md  performance.md  playbooks.md  plugins.md  prompt-caching.md  providers.md  recipes.md  sandbox.md  semantic-memory.md  testing.md  tool-packs.md  troubleshooting.md  tui.md  tutorial.md  ui.md  workbench.md
src/magent/gateway/: __init__.py  _daemon.py  base.py  router.py
src/magent/gateway/adapters/: __init__.py  discord.py  slack.py  telegram.py
src/magent/mcp/: __init__.py  client.py  manager.py
src/magent/memory/: __init__.py  extraction.py
src/magent/permissions/: __init__.py
src/magent/providers/: __init__.py
src/magent/skills/: __init__.py
src/magent/subagents/: __init__.py
src/magent/tools/: __init__.py  archive.py  catalog.py  db.py  executor.py  registry.py  shell.py  types.py  web.py
src/magent/utils/: __init__.py
src/magent/workbench_domains/: __init__.py  checkpoints.py  code_intel.py  patches.py  plans.py  project.py  release.py
tests/unit/: test_agent_efficiency.py  test_agent_loop.py  test_agent_pruning.py  test_architecture_imports.py  test_ask_audit.py  test_cache.py  test_cli.py  test_config.py  test_context.py  test_daily_driver_ux.py  test_db_tools.py  test_desktop_api.py  test_docs.py  test_hardening.py  test_logging_utils.py  test_memory_manager.py  test_model_health.py  test_performance.py  test_permissions.py  test_prompt_input.py  test_provider_models.py  test_provider_smoke.py  test_providers.py  test_readiness.py  test_release_016.py  test_release_024.py  test_release_025.py  test_semantic_memory.py  test_setup.py  test_token_efficiency.py  test_tools_safety.py  test_tui.py  test_ui.py  test_workbench.py
tests/unit/test_gateway/: __init__.py  test_gateway.py
tests/unit/test_mcp/: test_mcp.py
tests/unit/test_memory/: test_extraction.py
