[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magent"
version = "0.1.0"
description = "CLI-based local AI coding agent powered by MagGraph persistent memory"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Alex Merced" }]
requires-python = ">=3.12"
keywords = ["ai", "agent", "cli", "coding", "maggraph", "memory", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "litellm>=1.40.0",
    "maggraph>=0.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.40",
    "prompt-toolkit>=3.0.0",
    "cryptography>=42.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
magent = "magent.cli.main:app"

[project.urls]
Homepage = "https://github.com/AlexMercedCoder/MagAgent"
Repository = "https://github.com/AlexMercedCoder/MagAgent"
Issues = "https://github.com/AlexMercedCoder/MagAgent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/magent"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
