[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magent"
version = "0.1.0"
description = "CLI-based local AI coding agent powered by MagGraph persistent memory"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Alex Merced" }]
requires-python = ">=3.11"
keywords = ["ai", "agent", "cli", "coding", "maggraph", "memory", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
dependencies = [
    # Core CLI & UI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # LLM providers
    "litellm>=1.40.0",
    # Memory graph
    "maggraph>=0.1.0",
    # Config
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    # HTTP
    "httpx>=0.27.0",
    # Skills parsing
    "pyyaml>=6.0",
    # Git integration
    "gitpython>=3.1.40",
    # Async file I/O
    "aiofiles>=23.0.0",
    # Web search (real results, no API key)
    "duckduckgo-search>=6.0",
    # Clean article text extraction from URLs
    "trafilatura>=1.12",
    # HTML parsing
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    # Image tools
    "Pillow>=10.0",
    # JSON path queries
    "jmespath>=1.0",
    # Clipboard read/write
    "pyperclip>=1.8",
    # System metrics (CPU, RAM, disk)
    "psutil>=5.9",
    # Desktop notifications (cross-platform)
    "plyer>=2.1",
    # Document generation
    "python-docx>=1.1",
    "docxtpl>=0.18",
    "openpyxl>=3.1",
    "fpdf2>=2.7",
    # Template engine
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
magent = "magent.cli.main:app"

[project.urls]
Homepage = "https://github.com/AlexMercedCoder/MagAgent"
Repository = "https://github.com/AlexMercedCoder/MagAgent"
Issues = "https://github.com/AlexMercedCoder/MagAgent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/magent"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
