[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mag-agent"
version = "0.26.0"
description = "MagAgent — CLI AI coding agent with persistent MagGraph memory. Like the Magpie: intelligent, tool-using, and never forgets."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Alex Merced", email = "alexmerced@hey.com" }]
requires-python = ">=3.11"
keywords = [
    "ai", "agent", "cli", "coding", "maggraph", "memory", "llm",
    "coding-assistant", "terminal", "corvid", "magpie",
    "slack", "discord", "telegram", "gateway",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core CLI & UI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # LLM providers
    "litellm>=1.40.0",
    # Memory graph
    "maggraph>=0.2.0",
    # Config
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    # HTTP
    "httpx>=0.27.0",
    # Skills parsing
    "pyyaml>=6.0",
    # Git integration
    "gitpython>=3.1.40",
    # Async file I/O
    "aiofiles>=23.0.0",
    # Web search (real results, no API key)
    "duckduckgo-search>=6.0",
    # Clean article text extraction from URLs
    "trafilatura>=1.12",
    # HTML parsing
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    # Image tools
    "Pillow>=10.0",
    # JSON path queries
    "jmespath>=1.0",
    # Clipboard read/write
    "pyperclip>=1.8",
    # System metrics (CPU, RAM, disk)
    "psutil>=5.9",
    # Desktop notifications (cross-platform)
    "plyer>=2.1",
    # Document generation
    "python-docx>=1.1",
    "docxtpl>=0.18",
    "openpyxl>=3.1",
    "fpdf2>=2.7",
    # Template engine
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
gateway = [
    "slack-bolt>=1.18",
    "discord.py>=2.3",
    "python-telegram-bot>=21.0",
]
mcp = [
    "mcp[cli]>=1.0",
]
browser = [
    "playwright>=1.45.0",
]

[project.scripts]
magent = "magent.cli.main:app"

[project.urls]
Homepage = "https://github.com/AlexMercedCoder/MagAgent"
Repository = "https://github.com/AlexMercedCoder/MagAgent"
Issues = "https://github.com/AlexMercedCoder/MagAgent/issues"
Documentation = "https://github.com/AlexMercedCoder/MagAgent#readme"
Changelog = "https://github.com/AlexMercedCoder/MagAgent/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/magent"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
